added images in technology.html and fixed some issues

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@ VERSION : 1.1
           </button>
             <div class="clear-fix">
                 <img class="title-logo" src="images/logo.png" alt="logo"/>
-                <a class="navbar-brand nav-title  " href="index.html"><span class="themecolor">AU</span>ROHANANA SOLUTIONS</a>
+                <a class="navbar-brand nav-title  " href="index.html"><span class="themecolor">AU</span>ROHANA SOLUTIONS</a>
             </div>
            <!--  <p class="title-tag">Attaining greater heights...</p> -->
         </div>
