--- a/technology.html
+++ b/technology.html
@@ -66,7 +66,7 @@ VERSION : 1.1
           </button>
             <div class="clear-fix">
                 <img class="title-logo" src="images/logo.png" alt="logo"/>
-                <a class="navbar-brand nav-title  " href="index.html"><span class="themecolor">AU</span>ROHANANA SOLUTIONS</a>
+                <a class="navbar-brand nav-title  " href="index.html"><span class="themecolor">AU</span>ROHANA SOLUTIONS</a>
             </div>
         </div>
 
@@ -78,7 +78,7 @@ VERSION : 1.1
             
            </li>
             
-            <li class="dropdown"><a  id="ourProjects" onclick="myFunction(this.id)" class="page-scroll">OUR PROJETCS</a>
+            <li class="dropdown"><a  id="ourProjects" onclick="myFunction(this.id)" class="page-scroll">OUR PROJECTS</a>
            	 <div id="projDropdown" class="dropdown-content proj">
            	 <div  class="dropdownimgproj-d">
            	 <ul class="dropdownimgproj-u">
@@ -154,7 +154,7 @@ VERSION : 1.1
         <div class="row row-works">
           <div class="col-sm-5 port-item margin-bottom works-image">
             <div class="item-img-wrap">
-              <img src="images/automation_body.jpg" class="img-responsive" alt="workimg">
+              <img src="images/webdesign_body.jpg" class="img-responsive" alt="workimg">
               <div class="item-img-overlay">
                 <a href="#" class="show-image">
                   <span></span>
@@ -167,7 +167,9 @@ VERSION : 1.1
           <div class="col-sm-7 port-item margin-bottom">
             <div class="work-desc">
                 <h1><a href="#">Web Technologies</a></h1>
-                <span>We provide services for atm We provide services for atm We provide services for atm We provide services for atm We provide services for atm </span>
+                <span>
+                  We provide services for atm We provide services for atm We provide services for atm We provide services for atm We provide services for atm
+                </span>
 
               </div>
         </div>
@@ -203,7 +205,7 @@ VERSION : 1.1
       </div>
       <div class="col-sm-5 port-item margin-bottom works-image">
         <div class="item-img-wrap">
-          <img src="images/atm_body.jpg" class="img-responsive" alt="workimg">
+          <img src="images/database_body.jpg" class="img-responsive" alt="workimg">
           <div class="item-img-overlay">
             <a href="#" class="show-image">
               <span></span>
@@ -234,7 +236,7 @@ VERSION : 1.1
     <div class="row row-works">
       <div class="col-sm-5 port-item margin-bottom works-image">
         <div class="item-img-wrap">
-          <img src="images/work-1.jpg" class="img-responsive" alt="workimg">
+          <img src="images/java_body.jpg" class="img-responsive" alt="workimg">
           <div class="item-img-overlay">
             <a href="#" class="show-image">
               <span></span>
@@ -283,7 +285,7 @@ VERSION : 1.1
       </div>
       <div class="col-sm-5 port-item margin-bottom works-image">
         <div class="item-img-wrap">
-          <img src="images/work-1.jpg" class="img-responsive" alt="workimg">
+          <img src="images/microsoft_body.jpg" class="img-responsive" alt="workimg">
           <div class="item-img-overlay">
             <a href="#" class="show-image">
               <span></span>
@@ -314,7 +316,7 @@ VERSION : 1.1
       <div class="row row-works">
         <div class="col-sm-5 port-item margin-bottom works-image">
           <div class="item-img-wrap">
-            <img src="images/graphic.jpg" class="img-responsive" alt="workimg">
+            <img src="images/graphic_body.jpg" class="img-responsive" alt="workimg">
             <div class="item-img-overlay">
               <a href="#" class="show-image">
                 <span></span>
