Completly changed the our projects and technology pages using angular js.

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ VERSION : 1.1
            	<!-- <span id="pic"></span>--> 
           <ul >
           	<li>
-              <a href="proj-automation.html" rel="p1" class="page-scroll">Test Automation</a>
-              <a href="proj-atm.html" rel="p2">ATM Software</a>
-              <a href="proj-finance.html" rel="p3">Finance Management</a>
-              <a href="proj-business.html" rel="p4">Business Operations</a>
+                <a href="our-projects.html#!/automation" rel="p1" >Test Automation</a>
+                <a href="our-projects.html#!/atm" rel="p2">ATM Software</a>
+                <a href="our-projects.html#!/finance" rel="p3">Finance Management</a>
+                <a href="our-projects.html#!/business" rel="p4">Business Operations</a>
           	</li>
           </ul>
       			
@@ -115,11 +115,11 @@ VERSION : 1.1
                 </div>
                 <ul >
                   <li>
-                    <a href="tech-web.html" rel="p1">Web Technologies</a>
-                    <a href="tech-database.html" rel="p2">Databases</a>
-                    <a href="tech-java.html" rel="p3">Java</a>
-                    <a href="tech-microsoft.html" rel="p4">Microsoft Technologies</a>
-                    <a href="tech-graphic.html" rel="p5">Graphic Design</a>
+                      <a href="technology.html#!/web" rel="p1">Web Technologies</a>
+                      <a href="technology.html#!/database" rel="p2">Databases</a>
+                      <a href="technology.html#!/java" rel="p3">Java</a>
+                      <a href="technology.html#!/microsoft" rel="p4">Microsoft Technologies</a>
+                      <a href="technology.html#!/graphic" rel="p5">Graphic Design</a>
                   </li>
                 </ul>
     	      	</div>
@@ -151,10 +151,12 @@ VERSION : 1.1
                    <div class="main-heading-content col-md-12 col-sm-12 text-center">
         <h1 class="main-heading-title">Aurohana Solutions</h1>
         <p class="main-heading-text"> <span class="themecolor" >Attaining greater heights...</span></p>
-        <!-- <div class="btn-bar">
-          <a href="#" class="btn btn-custom theme_background_color">Ge Started</a>
-          <a href="#" class="btn btn-custom-outline">Contact Us</a>
-        </div> -->
+        <div class="btn-bar col-md-12">
+          <a href="#" class="btn btn-custom-outline col-md-4">Ge Started</a>
+          <a href="#" class="btn btn-custom-outline col-md-4">Contact Us</a>
+          <a href="#" class="btn btn-custom-outline col-md-4">Ge Started</a>
+         
+        </div>
       </div>
                </div>
            </div>
