--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,10 @@ VERSION : 1.1
            	<!-- <span id="pic"></span>--> 
           <ul >
           	<li>
-          		<a href="our-projects.html#automation" rel="p1" class="page-scroll">Test Automation</a>
-      			<a href="our-projects.html#atm" rel="p2">ATM Software</a>
-      			<a href="our-projects.html#finance" rel="p3">Finance Management</a>
-      			<a href="our-projects.html#business" rel="p4">Business Operations</a>
+                <a href="our-projects.html#!/automation" rel="p1" >Test Automation</a>
+                <a href="our-projects.html#!/atm" rel="p2">ATM Software</a>
+                <a href="our-projects.html#!/finance" rel="p3">Finance Management</a>
+                <a href="our-projects.html#!/business" rel="p4">Business Operations</a>
           	</li>
           </ul>
       			
@@ -114,11 +114,11 @@ VERSION : 1.1
               </div>
               <ul >
                 <li>
-                  <a href="tech-web.html" rel="p1">Web Technologies</a>
-                  <a href="tech-database.html" rel="p2">Databases</a>
-                  <a href="tech-java.html" rel="p3">Java</a>
-                  <a href="tech-microsoft.html" rel="p4">Microsoft Technologies</a>
-                  <a href="tech-graphic.html" rel="p5">Graphic Design</a>
+                    <a href="technology.html#!/web" rel="p1">Web Technologies</a>
+                    <a href="technology.html#!/database" rel="p2">Databases</a>
+                    <a href="technology.html#!/java" rel="p3">Java</a>
+                    <a href="technology.html#!/microsoft" rel="p4">Microsoft Technologies</a>
+                    <a href="technology.html#!/graphic" rel="p5">Graphic Design</a>
                 </li>
               </ul>
             </div>
@@ -132,7 +132,7 @@ VERSION : 1.1
       		</li>
            
              <li><a  class="page-scroll">SUPPORT</a></li>
-            <li><a href="#"  class="page-scroll">CONTACT US</a></li>
+             <li><a href="contact.html"  class="page-scroll">CONTACT US</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
